# task-rs

./: .env.example  README.md  docker-compose.yml
auth_service/: Cargo.toml
auth_service/migrations/: 20231021141010_create_user_table.sql
auth_service/src/: main.rs
auth_service/src/data/: mod.rs
auth_service/src/data/dto/: create_user.rs  login_user.rs  mod.rs
auth_service/src/data/repositories/: create_user.rs  get_user.rs  mod.rs
auth_service/src/data/services/: login.rs  signup.rs
auth_service/src/domain/: mod.rs
auth_service/src/domain/entities/: claims.rs  mod.rs
auth_service/src/domain/errors/: mod.rs  signup.rs
auth_service/src/infra/models/: user.rs
auth_service/src/infra/repositories/: user.rs
auth_service/src/presentation/controllers/: login.rs  signup.rs
task_service/: .env.example  Cargo.toml
task_service/migrations/: 20230930193359_create_task_entity.sql
task_service/src/: main.rs
task_service/src/data/: mod.rs
task_service/src/data/dto/: mod.rs
task_service/src/data/repositories/: create_task.rs  delete_task.rs  list_task.rs  mod.rs
task_service/src/data/services/: create_task.rs  delete_task.rs  list_task.rs
task_service/src/domain/entities/: task.rs
task_service/src/domain/errors/: task.rs
task_service/src/infra/models/: task.rs
task_service/src/infra/repositories/: task.rs
task_service/src/presentation/controllers/: create_task.rs  delete_task.rs  healthcheck.rs  list_task.rs  mod.rs
