[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-web-httpauth = "0.8.1"
async-trait = "0.1.74"
chrono = "0.4.31"
dotenv = "0.15.0"
jsonwebtoken = "9.0.0"
serde = { version = "1.0.188", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres", 
  "uuid",
  "chrono",
  "migrate",
  "offline"
]
