[package]
name = "task_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres", 
  "uuid",
  "chrono",
  "migrate",
  "offline"
]
